objects/Outbound_Callout_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Generic Custom setting for API Callout
SS-202
SS-205</description>
    <label>Outbound Callout Setting</label>
    <fields>
        <fullName>Path__c</fullName>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceId__c</fullName>
        <label>SourceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>